--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@babel/preset-env": "7.7.7",
         "@babel/preset-react": "7.7.4",
         "@babel/runtime": "7.7.7",
+        "@sentry/webpack-plugin": "^1.10.0",
         "@storybook/addon-actions": "5.2.8",
         "@storybook/addon-console": "1.2.1",
         "@storybook/addons": "5.2.8",
