--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "babel-loader": "8.2.3",
         "clean-webpack-plugin": "4.0.0",
         "copy-webpack-plugin": "9.0.1",
+        "core-js": "^3.21.1",
         "css-loader": "6.5.0",
         "cssnano": "5.0.8",
         "cssnano-preset-advanced": "5.1.4",
@@ -50,12 +51,15 @@
         "jest": "27.3.1",
         "less": "4.1.2",
         "less-loader": "10.2.0",
-        "mini-css-extract-plugin": "2.4.3",
+        "mini-css-extract-plugin": "^2.4.3",
+        "postcss-grid-flex": "github:tymmesyde/postcss-grid-flex",
         "postcss-loader": "6.2.0",
+        "postcss-preset-env": "^7.4.1",
         "readdirp": "3.6.0",
         "terser-webpack-plugin": "5.2.4",
         "webpack": "5.61.0",
         "webpack-cli": "4.9.1",
-        "webpack-dev-server": "4.7.4"
+        "webpack-dev-server": "4.7.4",
+        "whatwg-fetch": "^3.6.2"
     }
 }
